--- a/curs_client/cursBDClient/src/main/resources/ui/Sales.fxml
+++ b/curs_client/cursBDClient/src/main/resources/ui/Sales.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="mainBg" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="curs.BD.cursBd.ui.SalesController">
    <children>
@@ -17,30 +20,33 @@
             <TableColumn fx:id="quantityColumn" prefWidth="115.0" text="Quantity" />
          </columns>
       </TableView>
-      <Button fx:id="showAllButton" layoutX="291.0" layoutY="62.0" mnemonicParsing="false" text="Show all" />
-      <Button fx:id="addButton" layoutX="320.0" layoutY="221.0" mnemonicParsing="false" text="Add" />
-      <Button fx:id="deleteButton" layoutX="305.0" layoutY="262.0" mnemonicParsing="false" text="Delete" />
-      <TextField fx:id="dateInputAdd" layoutX="107.0" layoutY="222.0" prefHeight="26.0" prefWidth="102.0" promptText="date" />
-      <TextField fx:id="quantityInputAdd" layoutX="219.0" layoutY="221.0" prefHeight="26.0" prefWidth="82.0" promptText="quantity" />
+      <Button fx:id="showAllButton" layoutX="280.0" layoutY="63.0" mnemonicParsing="false" text="Show all" />
+      <Button fx:id="addButton" layoutX="310.0" layoutY="250.0" mnemonicParsing="false" text="Add" />
+      <Button fx:id="deleteButton" layoutX="7.0" layoutY="254.0" mnemonicParsing="false" text="Delete" />
+      <TextField fx:id="quantityInputAdd" layoutX="5.0" layoutY="206.0" prefHeight="26.0" prefWidth="82.0" promptText="quantity" />
       <TextArea fx:id="infoText" layoutX="6.0" layoutY="8.0" prefHeight="42.0" prefWidth="348.0" wrapText="true" />
-      <TextField fx:id="warehouseIDInputAdd" layoutX="3.0" layoutY="222.0" prefHeight="26.0" prefWidth="94.0" promptText="warehouse" />
-      <TextField fx:id="ddateInputDelete" layoutX="104.0" layoutY="263.0" prefHeight="26.0" prefWidth="102.0" promptText="date" />
-      <TextField fx:id="quantityInputDelete" layoutX="214.0" layoutY="263.0" prefHeight="26.0" prefWidth="82.0" promptText="quantity" />
-      <Button fx:id="changeQuantityButton" layoutX="228.0" layoutY="460.0" mnemonicParsing="false" text=" Change quantity" />
-      <TextField fx:id="quantityInputChange" layoutX="231.0" layoutY="418.0" prefHeight="26.0" prefWidth="116.0" promptText="new quantity" />
-      <Button fx:id="showInfoButton" layoutX="255.0" layoutY="303.0" mnemonicParsing="false" text="Show all sales" />
-      <TextField fx:id="dateInputChange" layoutX="110.0" layoutY="409.0" prefHeight="26.0" prefWidth="102.0" promptText="date" />
-      <Button fx:id="filterByDateButton" layoutX="262.0" layoutY="98.0" mnemonicParsing="false" text="filter by date" />
-      <TextField fx:id="dateFromFilterInput" layoutX="5.0" layoutY="101.0" prefHeight="26.0" prefWidth="82.0" promptText="100" />
-      <TextField fx:id="dateToFilterInput" layoutX="124.0" layoutY="100.0" prefHeight="26.0" prefWidth="82.0" promptText="1000" />
-      <Button fx:id="filterByQuantityButton" layoutX="238.0" layoutY="138.0" mnemonicParsing="false" text="filter by quantity" />
-      <TextField fx:id="quantityFromFilterInput" layoutX="5.0" layoutY="141.0" prefHeight="26.0" prefWidth="82.0" promptText="100" />
-      <TextField fx:id="quantityToFilterInput" layoutX="124.0" layoutY="139.0" prefHeight="26.0" prefWidth="82.0" promptText="1000" />
-      <Button fx:id="filterByAmountButton" layoutX="241.0" layoutY="180.0" mnemonicParsing="false" text="filter by amount" />
-      <TextField fx:id="amountFromFilterInput" layoutX="3.0" layoutY="183.0" prefHeight="26.0" prefWidth="82.0" promptText="100" />
-      <TextField fx:id="amountToFilterInput" layoutX="122.0" layoutY="182.0" prefHeight="26.0" prefWidth="82.0" promptText="1000" />
-      <TextField fx:id="warehouseIDInputAdd1" layoutX="3.0" layoutY="264.0" prefHeight="26.0" prefWidth="94.0" promptText="warehouse" />
-      <TextField fx:id="warehouseIDInputAdd11" layoutX="3.0" layoutY="304.0" prefHeight="26.0" prefWidth="94.0" promptText="warehouse" />
-      <TextField fx:id="warehouseIDInputAdd111" layoutX="3.0" layoutY="409.0" prefHeight="26.0" prefWidth="94.0" promptText="warehouse" />
+      <TextField fx:id="warehouseNameInputAdd" layoutX="5.0" layoutY="164.0" prefHeight="26.0" prefWidth="131.0" promptText="warehouse name" />
+      <Button fx:id="filterButton" layoutX="277.0" layoutY="390.0" mnemonicParsing="false" text=" Change" />
+      <TextField fx:id="quantityInputChange" layoutX="10.0" layoutY="350.0" prefHeight="26.0" prefWidth="116.0" promptText="new quantity" />
+      <Button fx:id="showInfoButton" layoutX="239.0" layoutY="448.0" mnemonicParsing="false" text="Show all sales" />
+      <TextField fx:id="warehouseNameInputShowInfo" layoutX="7.0" layoutY="449.0" prefHeight="26.0" prefWidth="131.0" promptText="warehouse name" />
+      <DatePicker fx:id="dateFrom" layoutX="5.0" layoutY="109.0" prefHeight="26.0" prefWidth="123.0" />
+      <DatePicker fx:id="dateTo" layoutX="156.0" layoutY="109.0" prefHeight="26.0" prefWidth="123.0" />
+      <Button fx:id="filterByDateButton" layoutX="307.0" layoutY="109.0" mnemonicParsing="false" text="filter" />
+      <DatePicker fx:id="dateInputAdd" layoutX="176.0" layoutY="165.0" prefHeight="26.0" prefWidth="178.0" />
+      <TextField fx:id="hoursInput" layoutX="198.0" layoutY="210.0" prefHeight="26.0" prefWidth="37.0" promptText="10" />
+      <TextField fx:id="minuteInput" layoutX="257.0" layoutY="210.0" prefHeight="26.0" prefWidth="37.0" promptText="05" />
+      <TextField fx:id="secondsInput" layoutX="315.0" layoutY="209.0" prefHeight="26.0" prefWidth="37.0" promptText="15" />
+      <Label layoutX="150.0" layoutY="216.0" text="time" textFill="WHITE" />
+      <DatePicker fx:id="dateInputChange" layoutX="176.0" layoutY="305.0" prefHeight="26.0" prefWidth="178.0" />
+      <TextField fx:id="hoursInputChange" layoutX="198.0" layoutY="350.0" prefHeight="26.0" prefWidth="37.0" promptText="10" />
+      <TextField fx:id="minuteInputChange" layoutX="257.0" layoutY="350.0" prefHeight="26.0" prefWidth="37.0" promptText="05" />
+      <TextField fx:id="secondsInputChange" layoutX="315.0" layoutY="349.0" prefHeight="26.0" prefWidth="37.0" promptText="15" />
+      <Label layoutX="150.0" layoutY="356.0" text="time" textFill="WHITE" />
+      <Label layoutX="22.0" layoutY="310.0" text="Set new data:" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
